<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background"
    tools:context=".ui.Sign_UP.SignUp">


    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/logo_iconn" />


    <EditText
        android:id="@+id/name_signup"
        android:layout_width="291dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:ems="10"
        android:hint="@string/user_name"
        android:inputType="text"
        android:textColor="@color/black"
        android:textColorHighlight="@color/black"
        android:textColorHint="@color/black"
        android:textColorLink="@color/black" />


    <EditText
        android:id="@+id/name_signupPassword"
        android:layout_width="291dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:ems="10"
        android:hint="@string/password"
        android:textColor="@color/black"
        android:textColorHighlight="@color/black"
        android:textColorHint="@color/black"
        android:textColorLink="@color/black" />

    <EditText
        android:id="@+id/email"
        android:layout_width="291dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"

        android:hint="Email"
        android:inputType="text"
        android:textColor="@color/black"
        android:textColorHighlight="@color/black"
        android:textColorHint="@color/black"
        android:textColorLink="@color/black" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_sign_up"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_fixed"
        android:text="@string/sign_up"
        android:textSize="20sp"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="369dp"
            android:layout_height="38dp"
            android:src="@drawable/line_icon" />
<!--        <ImageView-->
<!--            android:id="@+id/imageView3"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginStart="12dp"-->
<!--            android:src="@drawable/line_icon" />-->
    </LinearLayout>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/google_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_fixed"
        android:backgroundTint="@color/white"
        android:drawableLeft="@drawable/google"
        android:paddingStart="10dp"
        android:layout_gravity="center"
        android:text="@string/sing_up_by_google"
        android:textSize="15sp"
        tools:ignore="MissingConstraints" />

</LinearLayout>